# nutrisense

./: .envrc  .flake8  .gitignore  .pre-commit-hooks.yaml  README.md  Taskfile.yml  alembic.ini  atomi_release.yaml  flake.nix  pyproject.toml
infra/: .dockerignore  Dockerfile
infra/chart/: Chart.yaml  README.md  values.production.yaml  values.staging.yaml  values.yaml
infra/chart/templates/: NOTES.txt  _helpers.tpl  cert.yaml  cronjob.yaml  deployment.yaml  external-secret.yaml  hpa.yaml  ingress.yaml  mapping.yaml  service.yaml  serviceaccount.yaml
infra/chart/templates/tests/: test-connection.yaml
logs/: app.log.jsonl
nix/: env.nix  fmt.nix  packages.nix  pre-commit.nix  shells.nix
notebooks/: identify_food.ipynb
notebooks/usda_food/: preprocess_branded_food_data.ipynb  preprocess_foundation_food_data.ipynb  preprocess_sr_legacy_data.ipynb  preprocess_survey_food_data.ipynb
scripts/: Taskfile.setup.yml
scripts/ci/: build_publish_docker.sh  build_publish_helm.sh  pre-commit.sh  release_helm.sh
src/: api.py  config.py  container.py
src/modules/food/: food_modules.py
src/modules/food/domain/: food_service.py
src/modules/food/domain/models/: category.py  food.py  food_nutrient.py  nutrient.py
src/modules/food/infrastructure/data/: category_repository.py  food_nutrient_repository.py  food_repository.py  nutrient_repository.py
src/modules/llm/: llm_modules.py
src/modules/llm/domain/: embedding_service.py
src/modules/llm/infrastructure/: openai_repository.py
src/repositories/: elasticsearch_repository.py
src/repositories/database/: base_repository.py  database_session_provider.py
src/system/: fastapi_server.py  fastapi_server_factory.py  logger.py  logging_logger.py  strcutlog_logger.py
src/system/middleware/: authorization.py  exception_handler.py  process_time.py
src/utils/: helpers.py
